--- a/Imagenes/imagenes.html
+++ b/Imagenes/imagenes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Capítulo 5 - curso HTML</title>
+    <title>Imágenes</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="estilos.css" rel="stylesheet" />
